# SqliteWithC

./: .travis.yml  CMakeLists.txt  bash.exe.stackdump
source/: index.c
source/helpers/: dbHelper.c
source/include/: appInc.h  database.h
source/services/: transactions.c
source/tests/: CMakeLists.txt  createDatabase.c  createTransactionTable.c  deleteTransaction.c  saveTransaction.c  updateTransaction.c
